name: mines2
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:


executable mines2
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        containers,
        random -any,
        OpenGLRaw -any,
        GLURaw -any,
        GLUT -any,
        GLUtil -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans
    include-dirs: /usr/include/GL
    extra-lib-dirs:/usr/lib/x86-64-linux-gnu/mesa

test-suite test-mines2
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
